--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -12,6 +12,8 @@ block body
 		.box
 			.boxinner
 				form
+					h2 
+						span Login Page
 					.form-group
 						label(for="exampleInputEmail1") Email address
 						input#exampleInputEmail1.form-control(type="email" aria-describedby="emailHelp" placeholder="Enter email")
