--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -11,16 +11,18 @@ block body
 	.loginform
 		.box
 			.boxinner
-				form
+				form(autocomplete="off")
 					h2 
 						span Login Page
 					.form-group
-						label(for="exampleInputEmail1") Email address
-						input#exampleInputEmail1.form-control(type="email" aria-describedby="emailHelp" placeholder="Enter email")
+						.boxinput
+							input#exampleInputEmail1.form-control(type="email" aria-describedby="emailHelp" autocomplete="nope")
+							label(for="exampleInputEmail1") Email address
 						small#emailHelp.form-text.text-muted We'll never share your email with anyone else.
 					.form-group
-						label(for="exampleInputPassword1") Password
-						input#exampleInputPassword1.form-control(type="password" placeholder="Password")
+						.boxinput
+							input#exampleInputPassword1.form-control(type="password" autocomplete="new-password")
+							label(for="exampleInputPassword1") Password
 					.form-group.form-check
 						input#exampleCheck1.form-check-input(type="checkbox")
 						label.form-check-label(for="exampleCheck1") Check me out
