--- a/src/styles/_pages/index.sass
+++ b/src/styles/_pages/index.sass
@@ -56,3 +56,25 @@ main
 			.btn-primary
 				+bor-rad(40px)
 				+pad(.5rem 2rem)
+			.boxinput
+				position: relative
+				input
+					background: none 
+					border: 0
+					+bor-rad(0)
+					+pad(0.375rem 0)
+					border-bottom: 2px solid darken(#fff,15%)
+				label
+					+pos(abs, 0 null null 0)
+					margin-bottom: 0
+					height: 100%
+					display: flex
+					align-items: center
+					z-index: -1
+					transition: .25s all ease-in-out
+				input
+					&:focus
+						outline: none
+						box-shadow: none
+						~ label
+							transform: scale(.8) translate(-10px,-20px)
