--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -9,8 +9,16 @@ block variables
 //- Phần khai báo body
 block body
 	.loginform
-		.box
-			.boxinner
+		.loginform-processing
+			ul
+				li.active
+					span 1
+				li
+					span 2
+				li
+					span 3
+		.loginform-box
+			.loginform-box-inner
 				form(autocomplete="off")
 					h2 
 						span Login Page
