--- a/src/styles/_pages/index.sass
+++ b/src/styles/_pages/index.sass
@@ -10,7 +10,76 @@ main
 	justify-content: center 
 	align-items: center
 	background: darken(#fff,5%)
-	.box 
+	flex-direction: column
+	.loginform-processing
+		margin-bottom: 3rem
+		ul 
+			+pad(0)
+			+mar(0)
+			list-style-type: none
+			display: table
+			min-width: 200px
+			overflow: hidden
+			li
+				display: table-cell
+				text-align: center
+				position: relative
+				&:first-child 
+					text-align: left
+				&:last-child 
+					text-align: right
+				span 
+					width: 2rem
+					height: 2rem
+					justify-content: center
+					align-items: center
+					background: #dfdfdf
+					+bor-rad(50%)
+					+fw(bold)
+					border: 1px solid #d6d4d4
+					position: relative
+					display: inline-flex
+					z-index: 10
+				&:after 
+					content: ''
+					display: block
+					width: 100%
+					background: #d6d4d4
+					height: 3px
+					+pos(abs, 50% null null 0)
+					transform: translateY(-50%)
+				&.active
+					span 
+						background: green
+						border: 1px solid green
+						color: #fff
+					&:before 
+						content: ''
+						display: block
+						width: 50%
+						background: green
+						height: 3px
+						+pos(abs, 50% null null 0)
+						transform: translateY(-50%)
+						z-index: 2
+					&:first-child 
+						&:after 
+							background: green
+					&:last-child 
+						&:before 
+							content: ''
+							display: block
+							width: 50%
+							background: green
+							height: 3px
+							+pos(abs, 50% null null -50%)
+							transform: translateY(-50%)
+							z-index: 2
+						&:after 
+							background: green
+
+				
+	.loginform-box 
 		position: relative
 		&:before,
 		&:after 
@@ -26,7 +95,8 @@ main
 			transform: rotate(-5deg)
 		&:after
 			transform: rotate(5deg)
-		.boxinner 
+		
+		.loginform-box-inner 
 			+setBox()
 			position: relative
 			z-index: 10
@@ -68,15 +138,19 @@ main
 					+pos(abs, null null 0 50%)
 					transform: translateX(-50%)
 					transition: .35s all ease-in-out
-				&.active
-					&:after 
-						width: 100%
 				input
 					background: none 
 					border: 0
 					+bor-rad(0)
 					+pad(0.375rem 0)
 					border-bottom: 2px solid darken(#fff,15%)
+					&:focus
+						outline: none
+						box-shadow: none
+						&:after 
+							width: 100%
+						~ label
+							transform: scale(.8) translate(-10px,-20px)
 				label
 					+pos(abs, 0 null null 0)
 					margin-bottom: 0
@@ -85,8 +159,10 @@ main
 					align-items: center
 					z-index: -1
 					transition: .25s all ease-in-out
-				input
-					&:focus
+				&.active
+					&:after 
+						width: 100%
+					input
 						outline: none
 						box-shadow: none
 						&:after 
