--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -8,4 +8,11 @@ block variables
 
 //- Phần khai báo body
 block body
-	
+	- for(x=0;x<10;x++)
+		p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus dolor quibusdam ea reiciendis nemo dolorem impedit placeat nam, error, earum quisquam minus in non molestias obcaecati! Eligendi tenetur nulla excepturi.
+	.container
+		.row
+			.col
+				.item(data-count="200" data-from="0") 
+				.item(data-count="600" data-from="100") 
+				.item(data-count="1700" data-from="1000") 
