--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -8,11 +8,34 @@ block variables
 
 //- Phần khai báo body
 block body
-	- for(x=0;x<10;x++)
-		p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus dolor quibusdam ea reiciendis nemo dolorem impedit placeat nam, error, earum quisquam minus in non molestias obcaecati! Eligendi tenetur nulla excepturi.
-	.container
+	.container.shop
 		.row
-			.col
-				.item(data-count="200" data-from="0") 
-				.item(data-count="600" data-from="100") 
-				.item(data-count="1700" data-from="1000") 
+			- for(x=0;x<10;x++)
+				.col-sm-4.cnt
+					h2 sfjhdsfjk hkjhjk hjk 
+					p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus dolor quibusdam ea reiciendis nemo dolorem impedit placeat nam, error, earum quisquam minus in non molestias obcaecati! Eligendi tenetur nulla excepturi.
+					a.btn(href="#" data-toggle="modal" data-target="#quickView", data-backdrop="static" data-keyboard="false")
+						i.fa.fa-eye
+						| Quick view
+					.hehe
+						.owl-carousel.owl-theme.d-none
+							.item ádasda
+							.item ádasda
+							.item ádasda
+							.item ádasda
+							.item ádasda
+							.item ádasda
+							.item ádasda
+							.item ádasda
+	// Modal
+	#quickView.modal(tabindex='-1', role='dialog', aria-labelledby='quickViewLabel', aria-hidden='true')
+		.modal-dialog.modal-dialog-centered(role='document')
+			.modal-content
+				button.close(type='button', data-dismiss='modal', aria-label='Close')
+					span(aria-hidden='true') ×
+				.modal-title
+					h2 
+				.modal-body
+					.row 
+						.col-5
+						.col-7
