--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -18,15 +18,16 @@ block body
 						i.fa.fa-eye
 						| Quick view
 					.hehe
-						.owl-carousel.owl-theme.d-none
-							.item ádasda
-							.item ádasda
-							.item ádasda
-							.item ádasda
-							.item ádasda
-							.item ádasda
-							.item ádasda
-							.item ádasda
+						.d-none
+							.owl-carousel.owl-theme
+								.item ádasda
+								.item ádasda
+								.item ádasda
+								.item ádasda
+								.item ádasda
+								.item ádasda
+								.item ádasda
+								.item ádasda
 	// Modal
 	#quickView.modal(tabindex='-1', role='dialog', aria-labelledby='quickViewLabel', aria-hidden='true')
 		.modal-dialog.modal-dialog-centered(role='document')
