--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -8,35 +8,9 @@ block variables
 
 //- Phần khai báo body
 block body
-	.container.shop
-		.row
-			- for(x=0;x<10;x++)
-				.col-sm-4.cnt
-					h2 sfjhdsfjk hkjhjk hjk 
-					p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus dolor quibusdam ea reiciendis nemo dolorem impedit placeat nam, error, earum quisquam minus in non molestias obcaecati! Eligendi tenetur nulla excepturi.
-					a.btn(href="#" data-toggle="modal" data-target="#quickView", data-backdrop="static" data-keyboard="false")
-						i.fa.fa-eye
-						| Quick view
-					.hehe
-						.d-none
-							.owl-carousel.owl-theme
-								.item ádasda
-								.item ádasda
-								.item ádasda
-								.item ádasda
-								.item ádasda
-								.item ádasda
-								.item ádasda
-								.item ádasda
-	// Modal
-	#quickView.modal(tabindex='-1', role='dialog', aria-labelledby='quickViewLabel', aria-hidden='true')
-		.modal-dialog.modal-dialog-centered(role='document')
-			.modal-content
-				button.close(type='button', data-dismiss='modal', aria-label='Close')
-					span(aria-hidden='true') ×
-				.modal-title
-					h2 
-				.modal-body
-					.row 
-						.col-5
-						.col-7
+	.seo-gen
+		.container.mt-3
+			.row
+				.col
+					h1 SEO GEN
+					hr 
