--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -17,3 +17,6 @@ block body
 			.row 
 				.col 
 					#genform
+					button.btn.btn-primary#seo-button(type="button" onclick="javascript:appSEO.resultForm(this)") Tạo SEO
+				.col
+					textarea.form-control#result(cols="30", rows="10")
